--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="An Inquiry into Zeros and Ones">
+  <meta name="author" content="Chuanqi Sun">
 	<title>{{ title }}</title>
 	<link rel="stylesheet" href="/style.css">
 </head>
