--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -1,3 +1,3 @@
 <nav>
-	<a href="/">Stack Diver</a> · <a href="/feed.xml">Feed</a> · <a href="https://chuanqisun.com">About me</a>
+	<a href="/">Stack Diver</a> · <a href="/feed.xml">Feed</a> · <a href="https://chuanqisun.com">About me</a> · <a href="https://github.com/chuanqisun/blog">GitHub</a>
 </nav>
