--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 blockquote {
-  margin-inline-start: 1.5rem;
+  margin-inline: 0;
   padding-inline-start: 1.5rem;
   border-left: 1px solid ButtonBorder;
 }
